--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -28,3 +28,22 @@
   year={1999},
   publisher={ACS Publications}
 }
+
+@article{volkman2001two,
+  title={Two-state allosteric behavior in a single-domain signaling protein},
+  author={Volkman, Brian F and Lipson, Doron and Wemmer, David E and Kern, Dorothee},
+  journal={Science},
+  volume={291},
+  number={5512},
+  pages={2429--2433},
+  year={2001},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{akhmanova2015control,
+  title={Control of microtubule organization and dynamics: two ends in the limelight},
+  author={Akhmanova, Anna and Steinmetz, Michel O},
+  journal={Nature Reviews Molecular Cell Biology},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
