--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -68,6 +68,10 @@
 \SetAcknowledgeText{Acknowledgments, if included, must be written in complete sentences.  Do not use direct address.  For example, instead of Thanks, Mom and Dad!, you should say I thank my parents. }%
 \Acknowledge%
 
+\SetContributionName{\MakeUppercase{Contribution of Authors}}%
+\SetContributionText{All data collection and results obtained during my M.Sc. are presented here as a standard format thesis. This work includes results and figures obtained by collaborators in the Department of Chemistry Dr. Anthony Mittermaier and Jason Harris who conducted NMR experiments. All computer simulation work was done by myself. All text and literature review in this thesis was done by myself with feedback from my supervisor Jackie Vogel. Figures were prepared in collaboration with Jackie Vogel. }%
+\Contribution%
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%         English Abstract                        %%
@@ -101,11 +105,8 @@
 %methods chapter
 \input{methods.tex}
 
-\section{Evolutionary Algorithms}
 \input{gctmd_chapter.tex}
 
-\chapter{MEDIEVAL}
-?A totally blind process can by definition lead to anything; it can even lead to vision itself.?  Jacques Monod
 \chapter{Conclusions}
 
 \SetAppendixName{Appendix}%
