rough draft done

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -164,7 +164,7 @@ The CTs of $\alpha$- $\beta$- and $\gamma$-tubulins are enriched in acidic resid
 
 Through NMR measurements and MD computer simluations, we demonstrate the first example of an IDP acting as a disorder-to-disorder regulatory switch and propose a physical mechanism to explain the regulation of an essential biological machine. 
 
-Both NMR and MD are in strong agreement that the conformational sampling of the \gct{} lies entirely within the diordered ensemble as no signal of secondary structure was detected by either method. Diffusion measurements show that the major conformational state of the \gct{} in the WT and in the YD is collapsed, with the YD having a slightly larger hydrodynamic radius global average. However, NMR and MD simulations both provide evidence that a single point mutation to a negatively charged residue Y>D produces concerted motions along the entire polypeptide that are not present in the WT \gct{}. Analysis of the collective motions detected in MDS by PCA correspond closely to transitions between collapsed and extended states which leads us to hypothesize that the changes in chemical environment detected in MDS and difference in hydrodynamic radius is a product of an correlated opening and closing motion brought about by the Y>D mutation. This coordinated opening is likely brought about by the effects of electrostatic repulsion as the Asp substituion introduces further negative charge in an alread acidic region. Once the \gct{} enters the open state, several hydrophobic residues in the middle of the polypeptide(L464, A466, G468) become accessibile for protein-protein interactions.
+Both NMR and MD are in strong agreement that the conformational sampling of the \gct{} lies entirely within the diordered ensemble as no signal of secondary structure was detected by either method. Diffusion measurements show that the major conformational state of the \gct{} in the WT and in the YD is collapsed, with the YD having a slightly larger hydrodynamic radius global average. However, NMR and MD simulations both provide evidence that a single point mutation to a negatively charged residue Y>D produces concerted motions along the entire polypeptide that are not present in the WT \gct{}. Analysis of the collective motions detected in MDS by PCA correspond closely to transitions between collapsed and extended states which leads us to hypothesize that the changes in chemical environment detected in MDS and difference in hydrodynamic radius is a product of an correlated opening and closing motion brought about by the Y>D mutation. This coordinated opening is likely brought about by the effects of electrostatic repulsion as the Asp substituion introduces further negative charge in an alread acidic region. It has been previously shown that charge has a strong influence on the conformational ensemble and diffusion rates in IDPs \cite{mao2010net}. Once the \gct{} enters the open state, several hydrophobic residues in the middle of the polypeptide(L464, A466, G468) become accessibile for protein-protein interactions.
 
  Because both WT and YD appear to have the same collapsed native state and differ only when the YD undergoes transient excursion to an extended state, we can model this behaviour as a two well potential system \figref{wellsb}. The equilibrium between extended and collapsed conformations is shifted by phosphorylation to render extensions more accessible in the YD.  Previously, such dynamics were only observed in the well characterized order-to disorder transitions, or the foldling on binding pardigm. Furthermore, this model stands in contrast to the existing assumption that disordered ensembles are largely uniform \figref{wellsa} and constitute a uniform space of random chains. And instead, we observe that the disordered ensemble has some structure that IDPs can explore to modulate functionality by giving rise to switch-likeb behaviour while remaining disordered. Such behvaviour likely presents advantages to the cell through its ability to provide high specificity and low affinity binding at a low entropic cost. This suggests for the first time that the disordered conformational landscape can be organized and can therefore be host to coordinated and functional transitions.
 
@@ -175,10 +175,7 @@ Both NMR and MD are in strong agreement that the conformational sampling of the 
 \label{fig:wells}
 \end{figure}
 
-From these findings we propose that phosphorylation at Y445 of the \gct{} acts as a regulatory switch to modulate protein-protein interactions. In order to better visualize this mechanism, we dock 3D structures obtained from full $\gamma$-Tubulin simulations into cryo electron microscopy models of the $\gamma$-TuRC \figref{turc} which previously lacked any information on the \gct{} due to its disordered nature. Based on this visualization we can propose a mechanism to explain the phenotype of hyper-stable microtubules in the Y445D mutants in vivo; the extensions that project outward from the complex brought about by the Y>D substitution, or phosphorylation, allow the $\gamma$-TuRC to selectively recruit effector proteins to the minus end of microtubules, making them available to the entire complex and which subsequently act to regulate microtubule dynamics. The constitutive addition of negative charge in the Y445D mutant therefore shifts the equilibrium between the collapsed and extended states, leading to a misregulation of the recruitment of microtubule associated proteins and thus a defect in microtubule dynamics. Which protein is being recruited by the \gct{} remains an open question but there are several candidates known to affect microtubule stability and localize to the spindle poles \todo{which candidates} are currently being verified through various experimental screens. However, the characterization of \gct{} conformational sampling  is an essential fist step in identifying potential interactors. 
-
-This work is a first step towards
-
+From these findings we propose that phosphorylation at Y445 of the \gct{} acts as a regulatory switch to modulate protein-protein interactions. In order to better visualize this mechanism, we dock 3D structures obtained from full $\gamma$-Tubulin simulations into cryo electron microscopy models of the $\gamma$-TuRC \figref{turc} which previously lacked any information on the \gct{} due to its disordered nature. Based on this visualization we can propose a mechanism to explain the phenotype of hyper-stable microtubules in the Y445D mutants in vivo; the extensions that project outward from the complex brought about by the Y>D substitution, or phosphorylation, allow the $\gamma$-TuRC to selectively recruit effector proteins to the minus end of microtubules, making them available to the entire complex and which subsequently act to regulate microtubule dynamics. The constitutive addition of negative charge in the Y445D mutant therefore shifts the equilibrium between the collapsed and extended states, leading to a misregulation of the recruitment of microtubule associated proteins and thus a defect in microtubule dynamics. Which protein is being recruited by the \gct{} remains an open question but there are several candidates known to affect microtubule stability and localize to the spindle poles \todo{which candidates} are currently being verified through various experimental screens. However, the characterization of \gct{} conformational sampling  is an essential fist step in identifying potential interactors and understanding the complex mechanisms by which IDRs regulate large molecular machines.
 
 \begin{figure}
 \centering
