--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -108,13 +108,12 @@
 \input{gctmd_chapter.tex}
 
 \chapter{Conclusions}
+\input{conclusion.tex}
 
 \SetAppendixName{Appendix}%
 \SetAppendixText{Here is the text of an Appendix.  If only one appendix is required, place it here.}%
 \ETDAppendix{Appendix A}{Here is the text of an Appendix.}%
 \ETDAppendix{Appendix B}{Here is the text of a second, additional Appendix}%
-%fjklsdafjklsdafjkldasjfkldjaskl
-%\end{\ETDAppendix}%
 \bibHeading{References}
 \bibliography{thesis_cgo}
 \bibliographystyle{plain}
