--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -47,3 +47,13 @@
   year={2015},
   publisher={Nature Publishing Group}
 }
+@article{mao2010net,
+  title={Net charge per residue modulates conformational ensembles of intrinsically disordered proteins},
+  author={Mao, Albert H and Crick, Scott L and Vitalis, Andreas and Chicoine, Caitlin L and Pappu, Rohit V},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={107},
+  number={18},
+  pages={8183--8188},
+  year={2010},
+  publisher={National Acad Sciences}
+}
